Added Javadoc documentation